--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Reconocimiento de Número</title>
+  <link rel="icon" href="/static/Logo.ico" type="image/x-icon">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -10,6 +11,12 @@
       color: #333;
       margin: 0;
       padding: 0;
+    }
+    .logo {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 40px;
     }
     .contenedor {
       max-width: 700px;
@@ -44,6 +51,8 @@
   </style>
 </head>
 <body>
+  <img src="/static/Logo.ico" alt="Logo" class="logo">
+
   <div class="contenedor">
     <h1>Reconocimiento de Números Manuscritos</h1>
 
