--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
   <img src="/static/Logo.ico" alt="Logo" class="logo">
 
   <div class="contenedor">
-    <h1>Reconocimiento de Números Manuscritos</h1>
+    <h1>Reconocimiento de Números Manuscritos UMG</h1>
 
     <input type="file" id="imageInput" accept="image/*" onchange="mostrarPrevisualizacion()"><br>
     <img id="preview" alt="Vista previa de la imagen"><br>
